Docker now installs Tomcat for Java use. Makefile has a new target for starting Tomcat inside Docker container.